Added syntax highlighting of code blocks

--- a/source/blog/2015-04-30-hello.html.markdown
+++ b/source/blog/2015-04-30-hello.html.markdown
@@ -8,6 +8,16 @@ tags:
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet consectetur augue. Sed tempus rhoncus feugiat. Duis ut nibh leo. Etiam volutpat est id feugiat accumsan. Sed eget tempus sem. Praesent pellentesque eu erat sed hendrerit. Aenean eleifend ante enim, vel suscipit odio posuere a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis ultrices venenatis euismod. Sed at venenatis dolor, eu vehicula lectus. In hac habitasse platea dictumst. Phasellus bibendum neque id felis faucibus, sit amet dictum ex pharetra. Phasellus aliquet pellentesque lacus at scelerisque. Donec et lorem leo. Proin maximus nibh dui, in aliquam mauris venenatis eu.
 
+```ruby
+
+def my_cool_method(message)
+  puts message
+end
+
+maecenas tellus libero, dictum eu massa quis, interdum hendrerit lorem. vestibulum ullamcorper, metus id bibendum porta, risus libero tempus arcu, 
+```
+
+
 Maecenas tellus libero, dictum eu massa quis, interdum hendrerit lorem. Vestibulum ullamcorper, metus id bibendum porta, risus libero tempus arcu, ac efficitur neque turpis non diam. Aliquam ac augue commodo, imperdiet tortor et, convallis leo. Maecenas lacinia, leo nec feugiat feugiat, arcu nibh pretium ipsum, at vestibulum libero risus a nisi. Phasellus accumsan semper risus, mollis venenatis dolor fermentum nec. Praesent volutpat nec tortor at congue. Aliquam erat volutpat. Cras ultrices nibh sed lacinia pharetra. Nunc nibh lacus, bibendum vel mollis sit amet, hendrerit in elit. Aenean vitae sollicitudin libero. Nullam sed libero porttitor, volutpat arcu et, placerat orci. Curabitur porta risus neque, ac varius quam iaculis ac. Pellentesque porttitor, magna vitae tincidunt vehicula, arcu mauris sodales lectus, ultrices tempor lacus mauris in libero. Ut interdum pretium sagittis.
 
 Praesent vitae urna cursus, vestibulum odio ut, elementum quam. Praesent suscipit imperdiet lacus lobortis sodales. Quisque vitae congue ante. In volutpat quam nisi, ac interdum ante pellentesque a. Aenean sit amet metus metus. Nullam efficitur ante nec felis pulvinar rhoncus. In porta enim eu gravida pharetra. Aenean in elit suscipit est aliquet auctor. Pellentesque finibus enim orci.
